fix button overlap

--- a/src/frontend_widgets/avatar/main.css
+++ b/src/frontend_widgets/avatar/main.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   font-family: Roboto;
+  padding-bottom: 3em;
 }
 
 .avatar {
